# town-elder

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.beads/: issues.jsonl
.claude/skills/town-elder-agent-memory/: SKILL.md
.github/workflows/: publish.yml  quality-gate.yml  release-please.yml  rust-artifacts.yml
.town_elder/: index_state.json
.town_elder/vectors/: del.0  manifest.25  manifest.27  manifest.29  manifest.31  manifest.33  manifest.38  manifest.41
.town_elder/vectors/0/: scalar.0.ipc  scalar.10.ipc  scalar.12.ipc  scalar.14.ipc  scalar.16.ipc  scalar.18.ipc  scalar.2.ipc  scalar.20.ipc  scalar.22.ipc  scalar.24.ipc  scalar.26.ipc  scalar.28.ipc  scalar.30.ipc  scalar.32.ipc  scalar.34.ipc  scalar.36.ipc  scalar.38.ipc  scalar.4.ipc  scalar.40.ipc  scalar.42.ipc  scalar.44.ipc  scalar.46.ipc  scalar.48.ipc  scalar.50.ipc  scalar.52.ipc  scalar.54.ipc  scalar.56.ipc  scalar.58.ipc  scalar.6.ipc  scalar.60.ipc  scalar.62.ipc  scalar.64.ipc  scalar.66.ipc  scalar.68.ipc  scalar.70.ipc  scalar.72.ipc  scalar.74.ipc  scalar.76.ipc  scalar.78.ipc  scalar.8.ipc  (+1 more)
.town_elder/vectors/idmap.0/: 000057.sst  000192.sst  000211.sst  000226.sst  000241.sst  000256.sst  000286.sst  000293.sst  000314.sst  IDENTITY  MANIFEST-000188  MANIFEST-000196  MANIFEST-000207  MANIFEST-000222  MANIFEST-000237  MANIFEST-000252  MANIFEST-000290  MANIFEST-000310
context/: architecture.md  clean-architecture.md  cli-design.md  devex-analysis.md  documentation-plan.md  product-direction.md  python-implementation.md  rag-implementation.md  risks-analysis.md  testing-strategy.md
context/plans/: priority-list.md
context/research/: embedding.md  zvec-embedding-db.md
docs/: distribution-homebrew.md  indexing.md  native-cli.md  release.md  rust-backend-feasibility.md  rust-build.md  rust-embedding-distribution.md  rust-rollout.md  rust-shared-core-contract.md
docs/benchmarks/: rust-rollout-2026-02-18.json  rust-rollout-2026-02-18.md
rust/: Cargo.toml  pyproject.toml
rust/crates/te-core/: Cargo.toml  build.rs
rust/crates/te-core/src/: lib.rs
rust/src/: Cargo.toml  lib.rs  main.rs  pyproject.toml
rust/src/tests/: native_cli.rs
scripts/: benchmark_indexing.py
src/replay/: __init__.py  __main__.py  config.py  exceptions.py  models.py
src/replay/cli/: __init__.py  __main__.py
src/replay/embeddings/: __init__.py  embedder.py
src/replay/git/: __init__.py  diff_parser.py  runner.py
src/replay/services/: __init__.py  factory.py  index_service.py  query_service.py
src/replay/storage/: __init__.py  vector_store.py
src/town_elder/: __init__.py  __main__.py  cli_services.py  config.py  exceptions.py  models.py  rust_adapter.py
src/town_elder/cli/: __init__.py  __main__.py
src/town_elder/embeddings/: __init__.py  backend.py  embedder.py
src/town_elder/git/: __init__.py  diff_parser.py  runner.py
src/town_elder/indexing/: __init__.py  batch_manager.py  file_scanner.py  git_hash_scanner.py  pipeline.py
src/town_elder/parsers/: __init__.py  rst_handler.py
src/town_elder/services/: __init__.py  factory.py  index_service.py  query_service.py
src/town_elder/storage/: __init__.py  vector_store.py
tests/: conftest.py  test_batch_manager.py  test_benchmark_harness.py  test_bytecode.py  test_cli.py  test_cli_regressions.py  test_core.py  test_embed_backend.py  test_embed_backend_integration.py  test_embed_parity.py  test_file_hash_state.py  test_file_scanner.py  test_git_hash_scanner.py  test_git_runner.py  test_incremental_indexing.py  test_index_files_incremental_regressions.py  test_index_service.py  test_indexing_pipeline.py  test_rst_handler.py  test_rust_adapter.py  test_rust_core_contract.py  test_rust_core_parity.py  test_te_core_embedder.py  test_vector_store_json.py
tests/fixtures/rust_core_contract/commits/: README.md  simple_commit.json  unicode_commit.json
tests/fixtures/rust_core_contract/diffs/: README.md  quoted_paths.diff  simple_diff.diff  unquoted_paths.diff
tests/fixtures/rust_core_contract/doc_ids/: README.md  path_with_spaces.txt  unicode_path.txt
tests/fixtures/rust_core_contract/file_scanner/: README.md
tests/fixtures/rust_core_contract/file_scanner/nested_dirs/: root_file.py
tests/fixtures/rust_core_contract/file_scanner/nested_dirs/subdir/: mid.py
tests/fixtures/rust_core_contract/file_scanner/nested_dirs/subdir/deep/: deep.py
tests/fixtures/rust_core_contract/file_scanner/simple_files/: test.md  test.py  test.rst
tests/fixtures/rust_core_contract/rst_chunks/: README.md  nested_sections.rst  simple_section.rst  unicode_sections.rst  with_directives.rst  with_temporal_tags.rst
