[project]
name = "town-elder"
version = "0.1.0"
description = "A semantic git CLI tool using zvec + fastembed"
license = "MIT"
authors = [{ name = "Kalle Bylin" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "typer[all]>=0.12.0",
    "zvec>=0.1.0",
    "fastembed>=0.2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.3",
    "mypy>=1.0",
]

[project.scripts]
te = "town_elder.cli:run"

[build-system]
requires = ["uv_build>=0.7.21,<0.8.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".git",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    # Core Security & Logic
    "F",      # Pyflakes (catches "hallucinated" variables and unused imports)
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "B",      # flake8-bugbear (catches common bugs, e.g., mutable defaults)
    "S",      # flake8-bandit (security checks - agents LOVE hardcoding secrets)

    # Modernization (Agents often write outdated Python)
    "UP",     # pyupgrade (forces modern syntax, e.g., pathlib over os.path)
    "I",      # isort (keeps imports tidy)

    # Anti-Verbosity & Cleanliness (Agents are chatty coders)
    "SIM",    # flake8-simplify (removes useless code like `if x: return True`)
    "RET",    # flake8-return (fixes messy return logic)
    "C4",     # flake8-comprehensions (forces list/dict comprehensions)
    "ARG",    # flake8-unused-arguments (agents often hallucinate unused params)
    "ERA",    # eradicate (removes commented-out code - agents leave "notes" behind)

    # Specific Pylint Rules (The Heavy Hitters)
    "PLC0415", # Import outside top-level (The one you found!)
    "PLR0912", # Too many branches (prevents spaghetti logic)
    "PLR0913", # Too many arguments (forces cleaner function signatures)
    "PLR2004", # Magic value comparison (stops `if x == 42`)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # exception chaining - typer.Exit replaces original exception intentionally
    "S103",   # os.chmod for setting executable bits on hook files is intentional
    "S110",   # try/except pass for ignoring invalid state file is intentional
    "PLC0415", # lazy imports for optional dependencies
    "ARG001", # unused CLI options - placeholder for future implementation
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S603", "S607", "B011"]  # assert and subprocess calls are fine in tests

[tool.ruff.lint.isort]
known-first-party = ["town_elder"]
