[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

# Single source of truth for building the PyO3 extension from `rust/`.
# Version is sourced from Cargo metadata (workspace.package.version) to avoid drift.
[project]
name = "town-elder-core"
dynamic = ["version"]

[tool.maturin]
manifest-path = "src/Cargo.toml"
features = ["python"]
module-name = "town_elder._core"
python-source = "../src"
