[package]
name = "te-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "te"
path = "main.rs"

[features]
default = []
python = ["te-core/python"]

[dependencies]
te-core = { workspace = true, features = ["python"] }
clap = { workspace = true }
env_logger = "0.11"
