[package]
name = "te-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "te-rs"
path = "main.rs"

[lib]
name = "te_core_py"
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = []
python = ["dep:pyo3", "te-core/python"]

[dependencies]
te-core = { workspace = true }
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
clap = { workspace = true }
env_logger = "0.11"
serde_json = "1.0"
