[package]
name = "te-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "te_core"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

[features]
default = []
python = ["pyo3"]

[build-dependencies]
pyo3-build-config = { version = "0.22", features = ["resolve-config"] }
