[package]
name = "te-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "te_core"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

# FastEmbed for production embeddings (feature-gated)
# Use rustls variants to avoid OpenSSL cross-compilation issues in CI wheel builds.
fastembed = { version = "5.0", optional = true, default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries-rustls-tls", "image-models"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Hashing
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Regular expressions for RST parsing
regex = "1.10"

[features]
default = []
python = ["pyo3"]
fastembed = ["dep:fastembed"]

[build-dependencies]
pyo3-build-config = { version = "0.22", features = ["resolve-config"] }
